--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -18,3 +18,5 @@
                 = f.input :bio, label: false, input_html: { rows: 4 }
           .form-group.text-center
             = f.button :submit, 'Update Profile', class: 'btn btn-success'
+
+// hey 
